# pycddlib-standalone

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  README.rst  configure.py  make_include.py  pyproject.toml  setup.py
.github/workflows/: build.yml
